ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ollama
  namespace: ollama
  labels:
    kubernetes.io/service-name: ollama
addressType: IPv4
ports:
  - port: 11434
    protocol: TCP
    name: http
endpoints:
  - addresses:
      - "192.168.1.105"
